<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tg.coloursteward.view.ActivityHeaderView
        android:id="@+id/header_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color">

    </com.tg.coloursteward.view.ActivityHeaderView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="horizontal">

            <com.tg.coloursteward.view.CircularImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="15dp"
                android:src="@drawable/touxiang_01" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="郭凯"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="技术开发中心"
                    android:textColor="#666666"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2018.3.29  周四"
                android:textColor="#333"
                android:textSize="12sp" />


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#f6f1ea"
        >

        <ImageButton
            android:id="@+id/btnPreMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/tvCurrentMonth"
            android:background="@drawable/arrowback" />

        <ImageButton
            android:id="@+id/btnNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="35dp"
            android:layout_toRightOf="@+id/tvCurrentMonth"
            android:background="@drawable/yindao" />

        <TextView
            android:id="@+id/tvCurrentMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="11月"
            android:textColor="#323232"
            android:textSize="19sp" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            android:background="@drawable/guanbi" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" >

            <TableRow>


                <TextView
                    style="@style/dateStyle"
                    android:text="@string/sunday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/monday"
                    android:textColor="@color/canlendar_text_color" />
                <TextView
                    style="@style/dateStyle"
                    android:text="@string/tuesday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/wednesday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thursday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/friday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/saturday"
                    android:textColor="@color/canlendar_text_color" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="15dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white" >
        </android.support.v4.view.ViewPager>

    </LinearLayout>
</LinearLayout>
