<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/head_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rl_rollback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_18"
            android:paddingTop="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_top_return" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:paddingLeft="@dimen/margin_5"
            android:paddingTop="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/nav_shut_normal" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_web_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:paddingLeft="@dimen/margin_5"
            android:visibility="gone"
            android:paddingTop="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10">

            <ImageView
                android:id="@+id/iv_web_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="0dp"
                android:src="@drawable/navmore" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:layout_toLeftOf="@id/rl_close"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10"
            android:paddingRight="@dimen/margin_5"
            android:paddingBottom="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/nav_refresh_normal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/rl_refresh"
            android:layout_toRightOf="@id/rl_rollback"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="加载中..."
            android:textColor="@color/tv_mine"
            android:textSize="18dp" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/myProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:layout_below="@id/head_content"
        android:progressDrawable="@drawable/progressbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f2f3f4">

        <FrameLayout
            android:id="@+id/webview_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.tg.coloursteward.view.X5WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/webview_frame_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/head_content"
            android:background="#25000000"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:background="@color/color_f2f3f4"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/rl_pyq"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/iv_web_wechat"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/share_icon_pyq" />

                        <TextView
                            android:id="@+id/tv_wechat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="70dp"
                            android:text="@string/tv_webview_pyq"
                            android:textColor="@color/color_333b46"
                            android:textSize="13dp" />
                        />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_wechat"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/share_icon_wx" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="70dp"
                            android:text="@string/tv_webview_wechat"
                            android:textColor="@color/color_333b46"
                            android:textSize="13dp" />
                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_web_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/tv_webview_cancel"
                    android:textColor="@color/color_1890ff"
                    android:textSize="16dp" />
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>


</LinearLayout>